# nix-jupyter-cbsodata

./: .gitignore  README.md  cbsodata-economy.ipynb  cbsodata-energy.ipynb  cbsodata.ipynb  devenv.nix  kernels.nix  overrides.nix  pyproject.toml
my-custom-python/: pyproject.toml
