[tool.poetry]
name = "jupyter-nix-kernel-ipython"
version = "0.1.0"
description = ""
authors = []
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "1.1.1"
cbsodata = "1.3.5"
pandas = "2.2.3"
seaborn = "0.13.2"

[tool.poetry.dev-dependencies]
# build systems for dependencies
hatchling = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

